[project]
name = "medicaid-spending"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["duckdb", "polars", "pandas", "pyarrow", "matplotlib", "plotly"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

